Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.8.0
Description
Looks like clang doesn't like 'auto' in function prototype. This seems to be introduced by the following commit: https://github.com/apache/incubator-impala/commit/707f71b6ea13487c707337785e785487d2f470f2
./buildall.sh -skiptests -notests -asan /kwho-desktop-1/trees/incubator-impala/be/src/util/scope-exit-trigger.h:31:26: error: 'auto' not allowed in function prototype ScopeExitTrigger(const auto& trigger) : trigger_(trigger) {} ^~~~ /kwho-desktop-1/trees/incubator-impala/be/src/service/fe-support.cc:99:20: error: no matching constructor for initialization of 'impala::ScopeExitTrigger' ScopeExitTrigger close_runtime_state([&state]() { state.ReleaseResources(); });