IMPALA-4535: Remove 'auto' from parameter list

Although GCC supports void f(auto arg) { }, this isn't part of C++14.

Testing: Local ASAN build passed.

Change-Id: I838aa2c1081f7ed21cc2faa209a9eaa4fd0512a4
Reviewed-on: http://gerrit.cloudera.org:8080/5214
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Internal Jenkins